<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/ic_baseline_person_24"/>

    <TextView
        style="@style/TextViewAddEmployee"
        android:text="@string/add_new_employee"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewDetails"
            android:text="@string/title">

        </TextView>

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_below="@id/tvTitle"
            android:text="@string/first_name"
            style="@style/TextViewDetails"/>

        <TextView
            android:id="@+id/tvLastName"
            android:layout_below="@id/tvFirstName"
            android:text="@string/last_name"
            style="@style/TextViewDetails"/>

        <TextView
            android:id="@+id/tvWorkEmail"
            android:layout_below="@id/tvLastName"
            android:text="@string/e_mail"
            style="@style/TextViewDetails"/>

        <EditText
            android:id="@+id/etEnterTitle"
            style="@style/EditTextDetails"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@id/tvTitle"
            android:layout_toRightOf="@id/tvTitle"
            android:hint="@string/subham" />


        <EditText

            style="@style/EditTextDetails"
            android:layout_below="@id/tvFirstName"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@id/tvTitle"
            android:layout_toRightOf="@id/tvTitle"
            android:hint="@string/kumar"
            />

        <EditText

            style="@style/EditTextDetails"
            android:layout_below="@id/tvLastName"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@id/tvTitle"
            android:layout_toRightOf="@id/tvTitle"
            android:hint="@string/enter_e_mail"
            />

    </RelativeLayout>
</LinearLayout>